decreased font size to avoid line wrap

--- a/addSubtract.css
+++ b/addSubtract.css
@@ -39,7 +39,7 @@ button
 .equation
 {
 	font-family:		sans-serif;
-	font-size:			80px;
+	font-size:			60px;
 	font-weight:		bold;
 }
 .wrong
